app/assets/stylesheets/less/_page.less
/* ... */
.user-file-search {
    margin-bottom: 10px;
    input {
        width: 100% !important;
    }
}
.label-edit {
    color: @blue2
}

.right-menu{
    margin-top: 10px;
    margin-left: 10px;
    width: 400px;
}

.auth-provider-logo {
    font-family: 'Roboto', sans-serif;
    svg {
        vertical-align: middle;
    }
    .github {
        width: 30px;
        display: inline-block;
        margin-left: -4px;
        margin-top: 3px;
        margin-bottom: 3px;
    }
}

.providers {
    .provider-name {
        height: 40px;
    }
}

.cache-warning {
    color: darkviolet;
    font-weight: bold;
}

.width16px {
    width: 16px;
    display: inline-block;
}

.width25px {
    width: 25px;
    display: inline-block;
}

#simple-issue-list {
    .state-label {
        font-size: 13px;
        padding: 5px 0 3px;
        display: inline-block;
        min-width: 13px;
        color: white;
        border-radius: 5px;
        text-align: center;
        line-height: 14px;
        margin-right: 3px;

        &.open {
            color: white;
        }
        &.closed {
            color: #fd6956;
        }
    }

    .issue-item {
        font-size: 14px;
        padding: 3px;
        .item-name {
            vertical-align: middle;
        }
        .number {
            font-family: menlo, Consolas, monospace, sans-serif;
            font-size: 12px;
            color: gray;
            min-width: 35px;
            padding-right: 5px;
            display: inline-block;
            text-align: right;
            margin-right: 3px;
        }
    }
}

.subtasks {
    #simple-issue-list;
    margin-bottom: 15px;
    margin-top: 40px;
    .parent-issue {
        font-size: 16px;
    }
    .parent-issue-delimeter {
        margin: 5px 0 0 0;
        border-top: dashed 1px #ddd;
    }
}

.subtask {
    a {
        border: 1px solid;
        padding: 0 2px;
      &:hover {
          color: #51aacc;
          text-decoration: none;
      }
    }
    color: #9e9e9e;
}

.subtask-message {
    font-size: 12px;
    color: #9E9E9E;
    line-height: 15px;
    padding: 7px 0 5px 0;
    border: 1px solid #ddd;
    text-align: center;
    max-width: 80px;
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
    margin-top: 14px;
    &:hover {
        color: @primary;
        cursor:pointer;
        border: 1px solid @primary;
    }
    &.option-on {
        border: 1px solid @primary;
        color: @primary;
    }
}

.subtask-wrap {
    display: none;
  &.show {
      display: block;
  }
}

.infos, .parent-issue {
    .upload-progress {
        display: inline-block;
        width: 30px;
        vertical-align: middle;
        overflow: hidden;
        margin-top: 3px;
        box-shadow: none;
    }
    .completion-ratio {
        margin-right: 3px;
    }
    .open {
        background-color: #8BC34A;
    }
    .closed {
        background-color: #f68c52;
    }
    .parent-issue-state {
        border-radius: 0;
        color: white;
        padding: 2px;
        font-size: 12px;
        line-height: 17px;
        vertical-align: text-bottom;
    }
}

.txt-orange {
    color: #f68c52;
}

.txt-green {
    color: @light-green;
}

.reset-user-visited-list {
    padding-top: 5px;
    clear: both;
}

.file-path-wrap {
    font-size: 16px;
    .new-file-name {
        padding: 0 0;
        margin-bottom: 0;
        margin-left: 3px;
        font-size: 16px;
        border: none;
        border-bottom: 1px solid #999;
        border-radius: 0 !important;
        height: 36px;
    }
}

#new-file-link {
    margin: 0 5px;
}

.two-column-icon {
    display: inline-block;
    line-height: 30px;
    margin-left: 10px;
    i {
        font-size: 16px;
        margin-right: 5px;
        line-height: 20px;
    }

    label {
        padding-top: 7px;
    }
}

.absoluteAndLeftMargin {
    position: absolute;
    margin-left: 260px;
}

.page-nums {
    margin-left: -120px !important;
}

.highlightBg {
    background-color: #eee !important;
}

#pageslide {
    /* These styles MUST be included. Do not change. */
    display: none;
    position: fixed;
    top: 0;
    height: 100%;
    z-index: 999999;

    /* Specify the width of your pageslide here */
    width: 50%;
    padding: 0;

    /* These styles are optional, and describe how the pageslide will look */
    -webkit-box-shadow: inset 0 0 5px 5px #222;
    -moz-shadow: inset 0 0 5px 5px #222;
    //box-shadow: inset 0 0 5px 5px #222;
    box-shadow: 2px 2px 8px #000;
    background: #FFF url('/assets/images/loading-gif-2.gif') no-repeat center;
}

.myissues-search-input {
    margin: 20px 0 20px;
}

.project-protected {
    background-color: #00bcd4;
    border-radius: 2px;
    font-size: 15px;
    color: rgba(0, 0, 0, 0.7);
    padding: 0 2px;
}

.no-margin {
    margin: 0;
}

.my-issues {
    .post-item {
        padding: 6px 10px;
      
        .title-wrap {
            margin-top: 2px;
        }
        .infos {
            margin-top: 4px;
        }
    }
}

.subtask-mark {
    border: 1px solid #e95e01;
    border-radius: 3px;
    padding: 2px 5px;
    font-size: 14px;
    color: #e95e01;
    margin-right: 5px;
}

.subtask-number {
    color: darkgrey;
    font-size: 12px;
    margin-right: 5px;
}

.to-branch {
    border: 1px solid;
    padding: 0 5px;
}

.to-default-branch {
    border: 1px solid #03a9f4;
    padding: 0 5px;
    color: #03a9f4;
}

.no-border-at-child {
    .item-count-groups {
        border: none !important;
    }
}

.child-issues {
    .selected-child {
        font-weight: bold;
        border: 1px solid #ddd;
        background-color: #F5F5F5;
        border-radius: 4px;
    }
}

